modify post answers body params field, add a patch method

--- a/config.yaml
+++ b/config.yaml
@@ -17,5 +17,5 @@ swagger:
   enable: true
   path: /_/swagger/*any
 log: # default output is `stdout`, or can use a file name
-  route: /var/log/singlishwords/route.log
-  info: /var/log/singlishwords/info.log
+#  route: /var/log/singlishwords/route.log
+#  info: /var/log/singlishwords/info.log
