db:email len 320,gender len 10 to support non-bin,post response param modify,default get 20 questions

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 app:
   addr: :8080
-  mode: release
-  baseurl: /
+  mode: debug #release
+  baseurl: / #api/v1/
 mysql: #just template, will change when
   host: localhost:3306
   user: csqsiew
