--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,5 +19,17 @@ jobs:
         go-version: 1.17
 
     - name: Build
-#       run: go build -v ./... -o
-      run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o .build/sw_linux_amd64 main.go
+      run: |
+        CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o sw_linux_amd64 main.go
+        CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o sw_win_amd64.exe main.go
+        CGO_ENABLED=0 GOOS=linux GOARCH=386 go build -o sw_linux_x86 main.go
+        CGO_ENABLED=0 GOOS=windows GOARCH=386 go build -o sw_win_x86.exe main.go
+    
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          sw_linux_amd64
+          sw_win_amd64.exe
+          sw_linux_x86
+          sw_win_x86.exe
